# TeleStorage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  documents.db
include/: api.h  database.h  env.h  file_manger.h  interface.h  logger.h  paths.h
src/: api.cpp  database.cpp  env.cpp  file_manager.cpp  interface.cpp  logger.cpp  main.cpp
